compiler assignments/hw2/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    MULTILINE_COMMENT
    COMMENT

Grammar

Rule 0     S' -> program
Rule 1     program -> class_decl program
Rule 2     program -> empty
Rule 3     class_decl -> CLASS ID ( EXTENDS ID ) placeholder1
Rule 4     class_decl -> CLASS ID placeholder1
Rule 5     placeholder1 -> { class_body_decl placeholder2 }
Rule 6     placeholder2 -> class_body_decl placeholder2
Rule 7     placeholder2 -> empty
Rule 8     class_body_decl -> field_decl
Rule 9     class_body_decl -> method_decl
Rule 10    class_body_decl -> constructor_decl
Rule 11    field_decl -> modifier var_decl ;
Rule 12    modifier -> placeholder3 placeholder4
Rule 13    placeholder3 -> PUBLIC
Rule 14    placeholder3 -> PRIVATE
Rule 15    placeholder3 -> empty
Rule 16    placeholder4 -> STATIC
Rule 17    placeholder4 -> empty
Rule 18    var_decl -> type variables
Rule 19    type -> INT
Rule 20    type -> FLOAT
Rule 21    type -> BOOLEAN
Rule 22    type -> ID
Rule 23    variables -> variable placeholder5
Rule 24    placeholder5 -> , variable placeholder5
Rule 25    placeholder5 -> empty
Rule 26    variable -> ID
Rule 27    method_decl -> modifier type ID ( placeholder7 ) block
Rule 28    method_decl -> modifier VOID ID ( placeholder7 ) block
Rule 29    constructor_decl -> modifier ID ( placeholder7 ) block
Rule 30    placeholder7 -> formals
Rule 31    placeholder7 -> empty
Rule 32    formals -> formal_param placeholder8
Rule 33    placeholder8 -> , formal_param placeholder8
Rule 34    placeholder8 -> empty
Rule 35    formal_param -> type variable
Rule 36    block -> { placeholder9 }
Rule 37    placeholder9 -> stmt placeholder9
Rule 38    placeholder9 -> empty
Rule 39    stmt -> openStmt
Rule 40    stmt -> closedStmt
Rule 41    openStmt -> IF ( expr ) stmt
Rule 42    openStmt -> IF ( expr ) closedStmt ELSE openStmt
Rule 43    openStmt -> WHILE ( expr ) openStmt
Rule 44    openStmt -> FOR ( placeholder11 ; placeholder12 ; placeholder11 ) openStmt
Rule 45    closedStmt -> RETURN placeholder12 ;
Rule 46    closedStmt -> stmt_expr ;
Rule 47    closedStmt -> BREAK ;
Rule 48    closedStmt -> CONTINUE ;
Rule 49    closedStmt -> var_decl
Rule 50    closedStmt -> ;
Rule 51    closedStmt -> block
Rule 52    closedStmt -> IF ( expr ) closedStmt ELSE closedStmt
Rule 53    closedStmt -> WHILE ( expr ) closedStmt
Rule 54    closedStmt -> FOR ( placeholder11 ; placeholder12 ; placeholder11 ) closedStmt
Rule 55    placeholder11 -> stmt_expr
Rule 56    placeholder11 -> empty
Rule 57    placeholder12 -> expr
Rule 58    placeholder12 -> empty
Rule 59    literal -> INT_CONST
Rule 60    literal -> FLOAT_CONST
Rule 61    literal -> STRING_CONST
Rule 62    literal -> NULL
Rule 63    literal -> TRUE
Rule 64    literal -> FALSE
Rule 65    primary -> literal
Rule 66    primary -> THIS
Rule 67    primary -> SUPER
Rule 68    primary -> ( expr )
Rule 69    primary -> NEW ID ( placeholder14 )
Rule 70    primary -> lhs
Rule 71    primary -> method_invocation
Rule 72    placeholder14 -> arguments
Rule 73    placeholder14 -> empty
Rule 74    arguments -> expr placeholder15
Rule 75    placeholder15 -> , expr placeholder15
Rule 76    placeholder15 -> empty
Rule 77    lhs -> field_access
Rule 78    field_access -> primary . ID
Rule 79    field_access -> ID
Rule 80    method_invocation -> field_access ( placeholder14 )
Rule 81    expr -> assign
Rule 82    expr -> p1
Rule 83    assign -> lhs = expr
Rule 84    assign -> lhs PLUS_PLUS
Rule 85    assign -> PLUS_PLUS lhs
Rule 86    assign -> lhs MINUS_MINUS
Rule 87    assign -> MINUS_MINUS lhs
Rule 88    p1 -> p1 BOOL_OR p2
Rule 89    p1 -> p2
Rule 90    p2 -> p2 BOOL_AND p3
Rule 91    p2 -> p3
Rule 92    p3 -> p3 EQUAL p4
Rule 93    p3 -> p3 NOT_EQUAL p4
Rule 94    p3 -> p4
Rule 95    p4 -> p4 < p5
Rule 96    p4 -> p4 > p5
Rule 97    p4 -> p4 LESS_THAN_OR_EQUAL p5
Rule 98    p4 -> p4 GREATER_THAN_OR_EQUAL p5
Rule 99    p4 -> p5
Rule 100   p5 -> p5 + p6
Rule 101   p5 -> p5 - p6
Rule 102   p5 -> p6
Rule 103   p6 -> p6 * p7
Rule 104   p6 -> p6 / p7
Rule 105   p6 -> p7
Rule 106   p7 -> ! p7
Rule 107   p7 -> + p7
Rule 108   p7 -> - p7
Rule 109   p7 -> primary
Rule 110   stmt_expr -> assign
Rule 111   stmt_expr -> method_invocation
Rule 112   empty -> <empty>

Terminals, with rules where they appear

!                    : 106
(                    : 3 27 28 29 41 42 43 44 52 53 54 68 69 80
)                    : 3 27 28 29 41 42 43 44 52 53 54 68 69 80
*                    : 103
+                    : 100 107
,                    : 24 33 75
-                    : 101 108
.                    : 78
/                    : 104
;                    : 11 44 44 45 46 47 48 50 54 54
<                    : 95
=                    : 83
>                    : 96
BOOLEAN              : 21
BOOL_AND             : 90
BOOL_OR              : 88
BREAK                : 47
CLASS                : 3 4
COMMENT              : 
CONTINUE             : 48
DO                   : 
ELSE                 : 42 52
EQUAL                : 92
EXTENDS              : 3
FALSE                : 64
FLOAT                : 20
FLOAT_CONST          : 60
FOR                  : 44 54
GREATER_THAN_OR_EQUAL : 98
ID                   : 3 3 4 22 26 27 28 29 69 78 79
IF                   : 41 42 52
INT                  : 19
INT_CONST            : 59
LESS_THAN_OR_EQUAL   : 97
MINUS_MINUS          : 86 87
MULTILINE_COMMENT    : 
NEW                  : 69
NOT_EQUAL            : 93
NULL                 : 62
PLUS_PLUS            : 84 85
PRIVATE              : 14
PUBLIC               : 13
RETURN               : 45
STATIC               : 16
STRING_CONST         : 61
SUPER                : 67
THIS                 : 66
TRUE                 : 63
VOID                 : 28
WHILE                : 43 53
error                : 
{                    : 5 36
}                    : 5 36

Nonterminals, with rules where they appear

arguments            : 72
assign               : 81 110
block                : 27 28 29 51
class_body_decl      : 5 6
class_decl           : 1
closedStmt           : 40 42 52 52 53 54
constructor_decl     : 10
empty                : 2 7 15 17 25 31 34 38 56 58 73 76
expr                 : 41 42 43 52 53 57 68 74 75 83
field_access         : 77 80
field_decl           : 8
formal_param         : 32 33
formals              : 30
lhs                  : 70 83 84 85 86 87
literal              : 65
method_decl          : 9
method_invocation    : 71 111
modifier             : 11 27 28 29
openStmt             : 39 42 43 44
p1                   : 82 88
p2                   : 88 89 90
p3                   : 90 91 92 93
p4                   : 92 93 94 95 96 97 98
p5                   : 95 96 97 98 99 100 101
p6                   : 100 101 102 103 104
p7                   : 103 104 105 106 107 108
placeholder1         : 3 4
placeholder11        : 44 44 54 54
placeholder12        : 44 45 54
placeholder14        : 69 80
placeholder15        : 74 75
placeholder2         : 5 6
placeholder3         : 12
placeholder4         : 12
placeholder5         : 23 24
placeholder7         : 27 28 29
placeholder8         : 32 33
placeholder9         : 36 37
primary              : 78 109
program              : 1 0
stmt                 : 37 41
stmt_expr            : 46 55
type                 : 18 27 35
var_decl             : 11 49
variable             : 23 24 35
variables            : 18

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (3) class_decl -> . CLASS ID ( EXTENDS ID ) placeholder1
    (4) class_decl -> . CLASS ID placeholder1
    (112) empty -> .

    CLASS           shift and go to state 1
    $end            reduce using rule 112 (empty -> .)

    program                        shift and go to state 2
    class_decl                     shift and go to state 3
    empty                          shift and go to state 4

state 1

    (3) class_decl -> CLASS . ID ( EXTENDS ID ) placeholder1
    (4) class_decl -> CLASS . ID placeholder1

    ID              shift and go to state 5


state 2

    (0) S' -> program .



state 3

    (1) program -> class_decl . program
    (1) program -> . class_decl program
    (2) program -> . empty
    (3) class_decl -> . CLASS ID ( EXTENDS ID ) placeholder1
    (4) class_decl -> . CLASS ID placeholder1
    (112) empty -> .

    CLASS           shift and go to state 1
    $end            reduce using rule 112 (empty -> .)

    program                        shift and go to state 6
    class_decl                     shift and go to state 3
    empty                          shift and go to state 4

state 4

    (2) program -> empty .

    $end            reduce using rule 2 (program -> empty .)


state 5

    (3) class_decl -> CLASS ID . ( EXTENDS ID ) placeholder1
    (4) class_decl -> CLASS ID . placeholder1
    (5) placeholder1 -> . { class_body_decl placeholder2 }

    (               shift and go to state 7
    {               shift and go to state 9

    placeholder1                   shift and go to state 8

state 6

    (1) program -> class_decl program .

    $end            reduce using rule 1 (program -> class_decl program .)


state 7

    (3) class_decl -> CLASS ID ( . EXTENDS ID ) placeholder1

    EXTENDS         shift and go to state 10


state 8

    (4) class_decl -> CLASS ID placeholder1 .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID placeholder1 .)
    $end            reduce using rule 4 (class_decl -> CLASS ID placeholder1 .)


state 9

    (5) placeholder1 -> { . class_body_decl placeholder2 }
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (11) field_decl -> . modifier var_decl ;
    (27) method_decl -> . modifier type ID ( placeholder7 ) block
    (28) method_decl -> . modifier VOID ID ( placeholder7 ) block
    (29) constructor_decl -> . modifier ID ( placeholder7 ) block
    (12) modifier -> . placeholder3 placeholder4
    (13) placeholder3 -> . PUBLIC
    (14) placeholder3 -> . PRIVATE
    (15) placeholder3 -> . empty
    (112) empty -> .

    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 13
    STATIC          reduce using rule 112 (empty -> .)
    VOID            reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    BOOLEAN         reduce using rule 112 (empty -> .)

    class_body_decl                shift and go to state 12
    field_decl                     shift and go to state 15
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 16
    empty                          shift and go to state 14
    placeholder3                   shift and go to state 17
    modifier                       shift and go to state 18

state 10

    (3) class_decl -> CLASS ID ( EXTENDS . ID ) placeholder1

    ID              shift and go to state 20


state 11

    (10) class_body_decl -> constructor_decl .

    PUBLIC          reduce using rule 10 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 10 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 10 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 10 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> constructor_decl .)
    }               reduce using rule 10 (class_body_decl -> constructor_decl .)


state 12

    (5) placeholder1 -> { class_body_decl . placeholder2 }
    (6) placeholder2 -> . class_body_decl placeholder2
    (7) placeholder2 -> . empty
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (112) empty -> .
    (11) field_decl -> . modifier var_decl ;
    (27) method_decl -> . modifier type ID ( placeholder7 ) block
    (28) method_decl -> . modifier VOID ID ( placeholder7 ) block
    (29) constructor_decl -> . modifier ID ( placeholder7 ) block
    (12) modifier -> . placeholder3 placeholder4
    (13) placeholder3 -> . PUBLIC
    (14) placeholder3 -> . PRIVATE
    (15) placeholder3 -> . empty

    }               reduce using rule 112 (empty -> .)
    STATIC          reduce using rule 112 (empty -> .)
    VOID            reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    BOOLEAN         reduce using rule 112 (empty -> .)
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 13

    modifier                       shift and go to state 18
    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 15
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 16
    placeholder3                   shift and go to state 17
    placeholder2                   shift and go to state 23
    empty                          shift and go to state 22

state 13

    (14) placeholder3 -> PRIVATE .

    STATIC          reduce using rule 14 (placeholder3 -> PRIVATE .)
    VOID            reduce using rule 14 (placeholder3 -> PRIVATE .)
    ID              reduce using rule 14 (placeholder3 -> PRIVATE .)
    INT             reduce using rule 14 (placeholder3 -> PRIVATE .)
    FLOAT           reduce using rule 14 (placeholder3 -> PRIVATE .)
    BOOLEAN         reduce using rule 14 (placeholder3 -> PRIVATE .)


state 14

    (15) placeholder3 -> empty .

    STATIC          reduce using rule 15 (placeholder3 -> empty .)
    VOID            reduce using rule 15 (placeholder3 -> empty .)
    ID              reduce using rule 15 (placeholder3 -> empty .)
    INT             reduce using rule 15 (placeholder3 -> empty .)
    FLOAT           reduce using rule 15 (placeholder3 -> empty .)
    BOOLEAN         reduce using rule 15 (placeholder3 -> empty .)


state 15

    (8) class_body_decl -> field_decl .

    PUBLIC          reduce using rule 8 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl -> field_decl .)
    VOID            reduce using rule 8 (class_body_decl -> field_decl .)
    ID              reduce using rule 8 (class_body_decl -> field_decl .)
    INT             reduce using rule 8 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 8 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 8 (class_body_decl -> field_decl .)
    }               reduce using rule 8 (class_body_decl -> field_decl .)


state 16

    (9) class_body_decl -> method_decl .

    PUBLIC          reduce using rule 9 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl -> method_decl .)
    VOID            reduce using rule 9 (class_body_decl -> method_decl .)
    ID              reduce using rule 9 (class_body_decl -> method_decl .)
    INT             reduce using rule 9 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 9 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 9 (class_body_decl -> method_decl .)
    }               reduce using rule 9 (class_body_decl -> method_decl .)


state 17

    (12) modifier -> placeholder3 . placeholder4
    (16) placeholder4 -> . STATIC
    (17) placeholder4 -> . empty
    (112) empty -> .

    STATIC          shift and go to state 24
    VOID            reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    BOOLEAN         reduce using rule 112 (empty -> .)

    placeholder4                   shift and go to state 25
    empty                          shift and go to state 26

state 18

    (11) field_decl -> modifier . var_decl ;
    (27) method_decl -> modifier . type ID ( placeholder7 ) block
    (28) method_decl -> modifier . VOID ID ( placeholder7 ) block
    (29) constructor_decl -> modifier . ID ( placeholder7 ) block
    (18) var_decl -> . type variables
    (19) type -> . INT
    (20) type -> . FLOAT
    (21) type -> . BOOLEAN
    (22) type -> . ID

    VOID            shift and go to state 27
    ID              shift and go to state 33
    INT             shift and go to state 30
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 31

    var_decl                       shift and go to state 29
    type                           shift and go to state 32

state 19

    (13) placeholder3 -> PUBLIC .

    STATIC          reduce using rule 13 (placeholder3 -> PUBLIC .)
    VOID            reduce using rule 13 (placeholder3 -> PUBLIC .)
    ID              reduce using rule 13 (placeholder3 -> PUBLIC .)
    INT             reduce using rule 13 (placeholder3 -> PUBLIC .)
    FLOAT           reduce using rule 13 (placeholder3 -> PUBLIC .)
    BOOLEAN         reduce using rule 13 (placeholder3 -> PUBLIC .)


state 20

    (3) class_decl -> CLASS ID ( EXTENDS ID . ) placeholder1

    )               shift and go to state 34


state 21

    (6) placeholder2 -> class_body_decl . placeholder2
    (6) placeholder2 -> . class_body_decl placeholder2
    (7) placeholder2 -> . empty
    (8) class_body_decl -> . field_decl
    (9) class_body_decl -> . method_decl
    (10) class_body_decl -> . constructor_decl
    (112) empty -> .
    (11) field_decl -> . modifier var_decl ;
    (27) method_decl -> . modifier type ID ( placeholder7 ) block
    (28) method_decl -> . modifier VOID ID ( placeholder7 ) block
    (29) constructor_decl -> . modifier ID ( placeholder7 ) block
    (12) modifier -> . placeholder3 placeholder4
    (13) placeholder3 -> . PUBLIC
    (14) placeholder3 -> . PRIVATE
    (15) placeholder3 -> . empty

    }               reduce using rule 112 (empty -> .)
    STATIC          reduce using rule 112 (empty -> .)
    VOID            reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    BOOLEAN         reduce using rule 112 (empty -> .)
    PUBLIC          shift and go to state 19
    PRIVATE         shift and go to state 13

    modifier                       shift and go to state 18
    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 15
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 16
    placeholder3                   shift and go to state 17
    placeholder2                   shift and go to state 35
    empty                          shift and go to state 22

state 22

    (7) placeholder2 -> empty .
    (15) placeholder3 -> empty .

    }               reduce using rule 7 (placeholder2 -> empty .)
    STATIC          reduce using rule 15 (placeholder3 -> empty .)
    VOID            reduce using rule 15 (placeholder3 -> empty .)
    ID              reduce using rule 15 (placeholder3 -> empty .)
    INT             reduce using rule 15 (placeholder3 -> empty .)
    FLOAT           reduce using rule 15 (placeholder3 -> empty .)
    BOOLEAN         reduce using rule 15 (placeholder3 -> empty .)


state 23

    (5) placeholder1 -> { class_body_decl placeholder2 . }

    }               shift and go to state 36


state 24

    (16) placeholder4 -> STATIC .

    VOID            reduce using rule 16 (placeholder4 -> STATIC .)
    ID              reduce using rule 16 (placeholder4 -> STATIC .)
    INT             reduce using rule 16 (placeholder4 -> STATIC .)
    FLOAT           reduce using rule 16 (placeholder4 -> STATIC .)
    BOOLEAN         reduce using rule 16 (placeholder4 -> STATIC .)


state 25

    (12) modifier -> placeholder3 placeholder4 .

    VOID            reduce using rule 12 (modifier -> placeholder3 placeholder4 .)
    ID              reduce using rule 12 (modifier -> placeholder3 placeholder4 .)
    INT             reduce using rule 12 (modifier -> placeholder3 placeholder4 .)
    FLOAT           reduce using rule 12 (modifier -> placeholder3 placeholder4 .)
    BOOLEAN         reduce using rule 12 (modifier -> placeholder3 placeholder4 .)


state 26

    (17) placeholder4 -> empty .

    VOID            reduce using rule 17 (placeholder4 -> empty .)
    ID              reduce using rule 17 (placeholder4 -> empty .)
    INT             reduce using rule 17 (placeholder4 -> empty .)
    FLOAT           reduce using rule 17 (placeholder4 -> empty .)
    BOOLEAN         reduce using rule 17 (placeholder4 -> empty .)


state 27

    (28) method_decl -> modifier VOID . ID ( placeholder7 ) block

    ID              shift and go to state 37


state 28

    (20) type -> FLOAT .

    ID              reduce using rule 20 (type -> FLOAT .)


state 29

    (11) field_decl -> modifier var_decl . ;

    ;               shift and go to state 38


state 30

    (19) type -> INT .

    ID              reduce using rule 19 (type -> INT .)


state 31

    (21) type -> BOOLEAN .

    ID              reduce using rule 21 (type -> BOOLEAN .)


state 32

    (27) method_decl -> modifier type . ID ( placeholder7 ) block
    (18) var_decl -> type . variables
    (23) variables -> . variable placeholder5
    (26) variable -> . ID

    ID              shift and go to state 41

    variables                      shift and go to state 39
    variable                       shift and go to state 40

state 33

    (29) constructor_decl -> modifier ID . ( placeholder7 ) block
    (22) type -> ID .

    (               shift and go to state 42
    ID              reduce using rule 22 (type -> ID .)


state 34

    (3) class_decl -> CLASS ID ( EXTENDS ID ) . placeholder1
    (5) placeholder1 -> . { class_body_decl placeholder2 }

    {               shift and go to state 9

    placeholder1                   shift and go to state 43

state 35

    (6) placeholder2 -> class_body_decl placeholder2 .

    }               reduce using rule 6 (placeholder2 -> class_body_decl placeholder2 .)


state 36

    (5) placeholder1 -> { class_body_decl placeholder2 } .

    CLASS           reduce using rule 5 (placeholder1 -> { class_body_decl placeholder2 } .)
    $end            reduce using rule 5 (placeholder1 -> { class_body_decl placeholder2 } .)


state 37

    (28) method_decl -> modifier VOID ID . ( placeholder7 ) block

    (               shift and go to state 44


state 38

    (11) field_decl -> modifier var_decl ; .

    PUBLIC          reduce using rule 11 (field_decl -> modifier var_decl ; .)
    PRIVATE         reduce using rule 11 (field_decl -> modifier var_decl ; .)
    VOID            reduce using rule 11 (field_decl -> modifier var_decl ; .)
    ID              reduce using rule 11 (field_decl -> modifier var_decl ; .)
    INT             reduce using rule 11 (field_decl -> modifier var_decl ; .)
    FLOAT           reduce using rule 11 (field_decl -> modifier var_decl ; .)
    BOOLEAN         reduce using rule 11 (field_decl -> modifier var_decl ; .)
    STATIC          reduce using rule 11 (field_decl -> modifier var_decl ; .)
    }               reduce using rule 11 (field_decl -> modifier var_decl ; .)


state 39

    (18) var_decl -> type variables .

    ELSE            reduce using rule 18 (var_decl -> type variables .)
    IF              reduce using rule 18 (var_decl -> type variables .)
    WHILE           reduce using rule 18 (var_decl -> type variables .)
    FOR             reduce using rule 18 (var_decl -> type variables .)
    RETURN          reduce using rule 18 (var_decl -> type variables .)
    BREAK           reduce using rule 18 (var_decl -> type variables .)
    CONTINUE        reduce using rule 18 (var_decl -> type variables .)
    ;               reduce using rule 18 (var_decl -> type variables .)
    {               reduce using rule 18 (var_decl -> type variables .)
    PLUS_PLUS       reduce using rule 18 (var_decl -> type variables .)
    MINUS_MINUS     reduce using rule 18 (var_decl -> type variables .)
    INT             reduce using rule 18 (var_decl -> type variables .)
    FLOAT           reduce using rule 18 (var_decl -> type variables .)
    BOOLEAN         reduce using rule 18 (var_decl -> type variables .)
    ID              reduce using rule 18 (var_decl -> type variables .)
    THIS            reduce using rule 18 (var_decl -> type variables .)
    SUPER           reduce using rule 18 (var_decl -> type variables .)
    (               reduce using rule 18 (var_decl -> type variables .)
    NEW             reduce using rule 18 (var_decl -> type variables .)
    INT_CONST       reduce using rule 18 (var_decl -> type variables .)
    FLOAT_CONST     reduce using rule 18 (var_decl -> type variables .)
    STRING_CONST    reduce using rule 18 (var_decl -> type variables .)
    NULL            reduce using rule 18 (var_decl -> type variables .)
    TRUE            reduce using rule 18 (var_decl -> type variables .)
    FALSE           reduce using rule 18 (var_decl -> type variables .)
    }               reduce using rule 18 (var_decl -> type variables .)


state 40

    (23) variables -> variable . placeholder5
    (24) placeholder5 -> . , variable placeholder5
    (25) placeholder5 -> . empty
    (112) empty -> .

    ,               shift and go to state 46
    ;               reduce using rule 112 (empty -> .)
    IF              reduce using rule 112 (empty -> .)
    WHILE           reduce using rule 112 (empty -> .)
    FOR             reduce using rule 112 (empty -> .)
    RETURN          reduce using rule 112 (empty -> .)
    BREAK           reduce using rule 112 (empty -> .)
    CONTINUE        reduce using rule 112 (empty -> .)
    {               reduce using rule 112 (empty -> .)
    PLUS_PLUS       reduce using rule 112 (empty -> .)
    MINUS_MINUS     reduce using rule 112 (empty -> .)
    INT             reduce using rule 112 (empty -> .)
    FLOAT           reduce using rule 112 (empty -> .)
    BOOLEAN         reduce using rule 112 (empty -> .)
    ID              reduce using rule 112 (empty -> .)
    THIS            reduce using rule 112 (empty -> .)
    SUPER           reduce using rule 112 (empty -> .)
    (               reduce using rule 112 (empty -> .)
    NEW             reduce using rule 112 (empty -> .)
    INT_CONST       reduce using rule 112 (empty -> .)
    FLOAT_CONST     reduce using rule 112 (empty -> .)
    STRING_CONST    reduce using rule 112 (empty -> .)
    NULL            reduce using rule 112 (empty -> .)
    TRUE            reduce using rule 112 (empty -> .)
    FALSE           reduce using rule 112 (empty -> .)
    }               reduce using rule 112 (empty -> .)
    ELSE            reduce using rule 112 (empty -> .)

    placeholder5                   shift and go to state 45
    empty                          shift and go to state 47

state 41

    (27) method_decl -> modifier type ID . ( placeholder7 ) block
    (26) variable -> ID .

    (               shift and go to state 48
    ,               reduce using rule 26 (variable -> ID .)
    ;               reduce using rule 26 (variable -> ID .)


state 42

    (29) constructor_decl -> modifier ID ( . placeholder7 ) block
    (30) placeholder7 -> . formals
    (31) placeholder7 -> . empty
    (32) formals -> . formal_param placeholder8
    (112) empty -> .
    (35) formal_param -> . type variable
    (19) type -> . INT
    (20) type -> . FLOAT
    (21) type -> . BOOLEAN
    (22) type -> . ID

    )               reduce using rule 112 (empty -> .)
    INT             shift and go to state 30
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 53

    formal_param                   shift and go to state 49
    type                           shift and go to state 52
    placeholder7                   shift and go to state 51
    empty                          shift and go to state 50
    formals                        shift and go to state 54

state 43

    (3) class_decl -> CLASS ID ( EXTENDS ID ) placeholder1 .

    CLASS           reduce using rule 3 (class_decl -> CLASS ID ( EXTENDS ID ) placeholder1 .)
    $end            reduce using rule 3 (class_decl -> CLASS ID ( EXTENDS ID ) placeholder1 .)


state 44

    (28) method_decl -> modifier VOID ID ( . placeholder7 ) block
    (30) placeholder7 -> . formals
    (31) placeholder7 -> . empty
    (32) formals -> . formal_param placeholder8
    (112) empty -> .
    (35) formal_param -> . type variable
    (19) type -> . INT
    (20) type -> . FLOAT
    (21) type -> . BOOLEAN
    (22) type -> . ID

    )               reduce using rule 112 (empty -> .)
    INT             shift and go to state 30
    FLOAT           shift and go to state 28
    BOOLEAN         shift and go to state 31
    ID              shift and go to state 53

    formal_param                   shift and go to state 49
    type                           shift and go to state 52
    placeholder7                   shift and go to state 55
    empty                          shift and go to state 50
    formals                        shift and go to state 54

state 45

    (23) variables -> variable placeholder5 .
